# first_1

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.73f81fb  README.md  build_buildlog.txt  main.cpp  mainwindow.cpp  mainwindow.h  ninja_one.txt
src/config/: appsettings.cpp  appsettings.h
src/core/: excelimporter.cpp  excelimporter.h  models.h  protocol.cpp  protocol.h  randomcolorresolver.cpp  randomcolorresolver.h  workflowengine.cpp  workflowengine.h
src/services/: serialservice.cpp  serialservice.h
src/ui/: colortablemodel.cpp  colortablemodel.h  conflictcolordelegate.cpp  conflictcolordelegate.h  conflicttablemodel.cpp  conflicttablemodel.h  queuetablemodel.cpp  queuetablemodel.h
